--- a/Client/package.json
+++ b/Client/package.json
@@ -18,9 +18,12 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.7.8",
+    "framer-motion": "^12.23.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-imask": "^7.6.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "react-toastify": "^10.0.6"
@@ -29,6 +32,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
